--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 TRENDING_MOVIES=https://api.themoviedb.org/3/trending/all/week
 SEARCH_MOVEIS=https://api.themoviedb.org/3/search/movie
 ID_MOVIES=https://api.themoviedb.org/3/movie
+TOP=https://api.themoviedb.org/3/discover/movie
 API_KEY=0f71d03dfb252d35a99a459077ad04c3
