--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,7 @@ SEARCH_MOVEIS=https://api.themoviedb.org/3/search/movie
 
 ID_MOVIES=https://api.themoviedb.org/3/movie
 API_KEY=0f71d03dfb252d35a99a459077ad04c3
+DATABASE=postgres://localhost:5432/movie
+TOP=https://api.themoviedb.org/3/discover/movie
+PORT=3000
 
